--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,6 @@
         "NODE_ENV": "production"
       }
     },
-    "buildCommand": "next build",
+    "buildCommand": "next build && next export",
     "outputDirectory": "out"
 }
